# perps-factory

./: Anchor.toml  CLAUDE.md  README.md  package.json
app/: next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/components/: CreateMarketModal.tsx  Header.tsx  InitProtocol.tsx  MarketDetail.tsx  MarketList.tsx  TradePanel.tsx  WalletProvider.tsx
app/src/app/hooks/: useMarkets.ts  useProgram.ts
app/src/app/lib/: constants.ts  idl.ts
deck/: index.html
programs/perps-factory/: Cargo.toml
programs/perps-factory/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/perps-factory/src/amm/: funding.rs  mod.rs  pricing.rs
programs/perps-factory/src/instructions/: add_liquidity.rs  close_position.rs  create_market.rs  initialize.rs  liquidate.rs  open_position.rs  remove_liquidity.rs  update_funding.rs
scripts/: devnet-init.ts
tests/: perps-factory.ts
